// Indexly — database schema (DBML)
// Generated for documentation. Mirrors db/migrations/001_initial.sql and backend/prisma/schema.prisma

Table workspaces {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  slug varchar(120) [not null, unique]
  plan varchar(20) [not null, default: 'free']
  white_label_enabled boolean [not null, default: false]
  branding_logo_url text
  api_key varchar(64) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    api_key
  }
}

Table sites {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  domain varchar(255) [not null]
  sitemap_url text
  gsc_connected boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    workspace_id
    (workspace_id, domain) [unique]
  }
}

Table index_jobs {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  site_id uuid [not null, ref: > sites.id]
  source varchar(30) [not null]
  engine varchar(20) [not null]
  status varchar(20) [not null, default: 'pending']
  total_urls integer [not null, default: 0]
  success_count integer [not null, default: 0]
  failed_count integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  completed_at timestamptz

  Indexes {
    workspace_id
    site_id
    status
  }
}

Table index_urls {
  id uuid [pk, default: `gen_random_uuid()`]
  job_id uuid [not null, ref: > index_jobs.id]
  url text [not null]
  status varchar(20) [not null, default: 'queued']
  engine_response jsonb
  submitted_at timestamptz

  Indexes {
    job_id
    status
  }
}

Table brand_prompts {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  prompt_text text [not null]
  brand_name varchar(255) [not null]
  engines varchar(120) [not null]
  frequency varchar(20) [not null, default: 'weekly']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    workspace_id
  }
}

Table brand_mention_results {
  id uuid [pk, default: `gen_random_uuid()`]
  prompt_id uuid [not null, ref: > brand_prompts.id]
  engine varchar(30) [not null]
  mentioned boolean [not null, default: false]
  sentiment varchar(20)
  citation_url text
  response_text text
  run_at timestamptz [not null, default: `now()`]

  Indexes {
    prompt_id
    run_at
  }
}

Table audit_reports {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  site_id uuid [not null, ref: > sites.id]
  status varchar(20) [not null, default: 'pending']
  ai_readiness_score integer
  technical_score integer
  issues jsonb
  artifact_url text
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    workspace_id
    site_id
  }
}

Table keywords {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  site_id uuid [not null, ref: > sites.id]
  term varchar(255) [not null]
  country varchar(8) [default: 'US']
  current_rank integer
  previous_rank integer
  checked_at timestamptz

  Indexes {
    workspace_id
    (site_id, term, country) [unique]
  }
}

Table backlinks {
  id uuid [pk, default: `gen_random_uuid()`]
  site_id uuid [not null, ref: > sites.id]
  source_url text [not null]
  target_url text [not null]
  anchor_text text
  domain_authority integer
  discovered_at timestamptz [not null, default: `now()`]

  Indexes {
    site_id
  }
}

Table content_drafts {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  title varchar(500) [not null]
  language varchar(10) [not null, default: 'en']
  topic text
  body text [not null]
  status varchar(20) [not null, default: 'draft']
  ai_detection_score integer
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    workspace_id
    status
  }
}

Table wordpress_connections {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  site_url text [not null]
  username varchar(255) [not null]
  app_password_enc text [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    workspace_id
  }
}

Table publish_targets {
  id uuid [pk, default: `gen_random_uuid()`]
  draft_id uuid [not null, ref: > content_drafts.id]
  connection_id uuid [not null, ref: > wordpress_connections.id]
  remote_post_id varchar(120)
  status varchar(20) [not null, default: 'pending']
  published_at timestamptz

  Indexes {
    draft_id
  }
}

Table alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  type varchar(40) [not null]
  threshold jsonb
  message text
  triggered_at timestamptz [not null, default: `now()`]
  read boolean [not null, default: false]

  Indexes {
    workspace_id
    (workspace_id, read)
  }
}

Table scheduled_reports {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  recipients text [not null]
  frequency varchar(20) [not null]
  sections jsonb [not null]
  last_sent_at timestamptz

  Indexes {
    workspace_id
  }
}

Table quota_usage {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  period varchar(7) [not null]
  urls_indexed integer [not null, default: 0]
  prompts_run integer [not null, default: 0]
  content_generated integer [not null, default: 0]

  Indexes {
    (workspace_id, period) [unique]
  }
}